# hush-profanity

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: replacements.json  settings.example.toml  swear_phrases.txt  swears.txt
scripts/: install-windows.ps1
src/hush_profanity/: __init__.py  __main__.py  _transcribe_worker.py  audio.py  clean.py  cli.py  config.py  correct.py  edl.py  profanity.py  scanner.py  srt.py  transcribe.py
src/hush_profanity/webui/: server.py  settings_io.py
src/hush_profanity/webui/static/: index.js  settings.js  style.css  watch.js
src/hush_profanity/webui/templates/: index.html  settings.html  watch.html
tests/: test_smoke.py
windows/: add-to-start-menu.ps1  clean.bat  context-menu-install.ps1  context-menu-install.reg  context-menu-uninstall.ps1  context-menu-uninstall.reg  edit-with-hush.ps1  install.bat  install.reg  manual-skip.bat  open-in-editor.bat  remove-from-start-menu.ps1  scan.bat  test-context-menu.bat
